# breadWare-0.3

./: CMakeLists.txt  README.md  build.sh
include/framework-arduino-mbed/: .piopm  package.json  platform.txt
include/framework-arduino-mbed/variants/ARDUINO_NANO33BLE/: defines.txt
include/framework-arduino-mbed/variants/EDGE_CONTROL/: defines.txt
include/framework-arduino-mbed/variants/NANO_RP2040_CONNECT/: defines.txt
include/framework-arduino-mbed/variants/PORTENTA_H7_M4/: defines.txt
include/framework-arduino-mbed/variants/PORTENTA_H7_M7/: defines.txt
include/tool-rp2040tools/: .piopm  elf2uf2  package.json  rp2040load
include/toolchain-gccarmnoneeabi/: package.json
src/: Globals.h  MT.cpp  breadWareDefines.h  serial.h
